test/fixtures/config/theming/error/failToParseCliOpts/.gulp.js
module.exports = {
  msgs: {
    error: {
      failToParseCliOpts: '**{1}**',
    },
  },
};
